# Google-AI4Code

./: .gitignore  LICENSE  Makefile  README.md  Snakefile  convert.py  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: transformer.yml
notebooks/presentation/: ai4code-inference.ipynb
notebooks/sketch/: ai4code-codebert-tpu-train.ipynb  data_preprocessing.ipynb  download-models.ipynb  language_notebook_ident.ipynb  merge-data.ipynb  research-data-eda.ipynb
src/: clean.py  dataset.py  featurize.py  lang_group.py  language_groups.py  merging.py  models.py  train.py  translation.py
