[tool.poetry]
name = "google-ai4code"
version = "0.1.0"
description = ""
authors = ["Dzmitry Sakaleuski"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
dvc = "^2.10.2"
kaggle = "^1.5.12"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
numpy = "^1.22.3"
pandas = "^1.4.2"
scikit-learn = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
